--- a/stylesheet/home.css
+++ b/stylesheet/home.css
@@ -6,6 +6,10 @@ main {
   width: 100%;
   height: 100vh;
   position: relative;
+  /*want grid of coloumn 1 only*/
+  padding-top: 50px;
+  background-color: #000;
+  /* overflow: hidden; */
 }
 
 main #home {
@@ -13,53 +17,151 @@ main #home {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100vh;
-  width: 100%;
+  height: 100%;
+  width: 85%;
+  /* background-color: #00ff99; */
+  position: relative;
   text-align: center;
+  margin: auto;
+  overflow: hidden;
 }
 
 main #home .part1 {
-  height: 50%;
-  width: 70%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 20px;
-  h1 {
-    font-size: 4vw;
-    color: white;
-    font-weight: 400;
-    text-transform: uppercase;
-    font-family: "Audiowide", sans-serif;
-    text-shadow: 0px 0px 20px orange;
-    -webkit-text-stroke: 1px #fff;
-    -webkit-text-fill-color: transparent;
-    letter-spacing: -2px;
-    line-height: 1.1;
-    animation: heading-glow 10s linear infinite;
-    margin-bottom: 0px;
-  }
-  h2 {
-    margin-top: 0px;
-    width: 80%;
-    font-size: 2vw;
-    color: white;
-    font-weight: 300;
-    font-family: "Zain", sans-serif;
-    line-height: 1.3;
-    letter-spacing: 2px;
-  }
-}
-
-main #home .part2 {
   height: 30%;
   width: 100%;
   display: flex;
   flex-direction: column;
+  justify-content: end;
+  /* z-index: 1; */
+  /* align-items: center; */
+  /* background-color: violet; */
+  gap: 20px;
+  h1 {
+    text-align: center;
+    font-size: 12vw;
+    color: white;
+    font-weight: 400;
+    text-transform: uppercase;
+    font-family: "Rampart One", sans-serif;
+    letter-spacing: -2px;
+    line-height: 1.1;
+    /* animation: heading-glow 10s linear infinite; */
+    animation: home-slideup 1s linear;
+    margin: 0px;
+    /* z-index: 7; */
+    position: relative;
+  }
+
+  h1::after {
+    position: absolute;
+    content: attr(data-content);
+    inset: 0 0 0 0;
+    -webkit-text-stroke: 2px #fff;
+    color: transparent;
+    z-index: 2;
+  }
+}
+
+main #home .part2 {
+  height: 70%;
+  width: 100%;
+  display: flex;
+  /* flex-direction: column; */
   justify-content: center;
   align-items: center;
-  /* background-color: brown; */
+  position: relative;
+  overflow: visible;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+  animation: home-slideup 1s linear;
+
+  .model {
+    height: 100%;
+    width: 100%;
+    position: relative;
+    /* overflow-x: visible; */
+    /* background-color: #00ff00; */
+
+    img {
+      overflow: visible;
+      bottom: 0px;
+      left: 0px;
+      width: 100%;
+      height: 50%;
+      position: absolute;
+      object-fit: cover;
+      visibility: hidden;
+      animation: float 4s linear infinite, fadeIn 1s ease-in-out forwards;
+      animation-delay: 1s;
+    }
+  }
+
+  .text {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 35px;
+
+    h1 {
+      margin: 0px;
+      font-family: "Audiowide", sans-serif;
+      /* font-family: "Notable", sans-serif; */
+      font-size: 2.5vw;
+      text-align: center;
+      letter-spacing: 2px;
+      word-spacing: 8px;
+      font-weight: 900;
+      width: 70%;
+      text-transform: capitalize;
+      color: silver;
+      text-shadow: 5px 5px 20px #fff;
+
+      /* -webkit-text-stroke: 1px paleturquoise; */
+      /* color: transparent; */
+      span {
+        /* font-family: "Audiowide", sans-serif; */
+        font-family: "Notable", sans-serif;
+        letter-spacing: 2px;
+        font-weight: 100;
+        font-style: italic;
+        color: white;
+        /* animation: heading-glow 1s linear infinite; */
+      }
+    }
+
+    h2 {
+      margin: 0px;
+      font-size: 1.8vw;
+      font-family: Zain, sans-serif;
+      text-align: center;
+      letter-spacing: 2px;
+      word-spacing: 8px;
+      font-weight: 400;
+      width: 60%;
+      color: #fff;
+
+      span {
+        /* font-family: "Audiowide", sans-serif; */
+        letter-spacing: 2px;
+        font-weight: 900;
+        font-style: italic;
+        color: gold;
+        /* animation: heading-glow 1s linear infinite; */
+      }
+    }
+
+    div {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 20px;
+      margin-top: 20px;
+    }
+  }
 
   .btns {
     /* background-color: aqua; */
@@ -96,59 +198,100 @@ main #home .part2 {
   align-items: center;
   flex-direction: column;
   /* gap: 2px; */
-  animation: bounce 2s infinite;
+  animation: float 2s infinite;
 }
-@keyframes bounce {
-  0%,
-  100% {
-    transform: translateY(0);
+
+@keyframes fadeIn {
+  from {
+    visibility: visible;
+    opacity: 0;
+    filter: blur(8px);
   }
-  50% {
-    transform: translateY(-10px);
+  to {
+    visibility: visible;
+    opacity: 0.3;
+    filter: blur(2px);
   }
 }
 
-@keyframes heading-glow {
-  0%,
-  100% {
-    text-shadow: 0 0 20px #00ffff;
+@keyframes float {
+  from {
+    transform: translateY(0px);
   }
-  20% {
-    text-shadow: 0 0 35px #00ff99;
+  50% {
+    transform: translateY(30px);
   }
-  40% {
-    text-shadow: 0 0 20px #00ff00;
+}
+
+@keyframes home-slideup {
+  from {
+    /* transform: scaleZ(0); */
+    opacity: 0;
   }
-  60% {
-    text-shadow: 0 0 30px #00ff99;
+  to {
+    /* transform: scaleZ(1); */
+    opacity: 1;
   }
-  80% {
-    text-shadow: 0 0 10px #00ffff;
+}
+
+@media (max-width: 968px) {
+  main #home .part1 {
+    h1 {
+      font-size: 15vw;
+      text-align: center;
+    }
+  }
+  main #home .part2 {
+    .model {
+      position: relative;
+      width: 80%;
+      img {
+        height: 120%;
+        opacity: 0.8;
+        filter: blur(2px);
+      }
+    }
+    .text {
+      position: absolute;
+      bottom: 0;
+      width: 80%;
+      h1 {
+        font-size: 3vw;
+        width: 100%;
+        /* background-color: blueviolet; */
+      }
+      h2 {
+        font-size: 2.5vw;
+        width: 100%;
+      }
+    }
   }
 }
 
 @media (max-width: 768px) {
+  main {
+    padding-top: 0px;
+  }
   main #home .part1 {
-    height: 40%;
-    width: 90%;
     h1 {
-      font-size: 7vw;
-    }
-    h2 {
-      font-size: 4vw;
+      font-size: 18vw;
     }
   }
   main #home .part2 {
-    .btns {
-      font-size: 1vw;
-      gap: 20px;
+    .model {
+      img {
+        height: 130%;
+      }
     }
-    .stats {
-      gap: 30px;
-    }
-    .stats div {
-      /* margin-top: 10px; */
-      font-size: 2vw;
+    .text {
+      h1 {
+        font-size: 3.5vw;
+        width: 100%;
+      }
+      h2 {
+        font-size: 2.5vw;
+        width: 100%;
+      }
     }
   }
   .extra {
@@ -159,31 +302,39 @@ main #home .part2 {
 }
 @media (max-width: 500px) {
   main #home .part1 {
-    height: 30%;
-    width: 90%;
     h1 {
-      font-size: 8vw;
-    }
-    h2 {
-      font-size: 5vw;
+      font-size: 22vw;
+      transform: scaleY(1.3);
+      margin-bottom: 30px;
     }
   }
   main #home .part2 {
-    .btns {
-      font-size: 2vw;
-      gap: 15px;
+    width: 100%;
+    /* background-color: beige; */
+    .model {
+      img {
+        height: 130%;
+      }
     }
-    .stats {
-      padding-top: 50px;
-      gap: 5vw;
-    }
-    .stats div {
-      /* margin-top: 10px; */
-      font-size: 3vw;
+    .text {
+      width: 95%;
+      h1 {
+        /* margin: 0px; */
+        font-size: 5vw;
+        width: 100%;
+      }
+      h2 {
+        /* margin: 0px; */
+        font-size: 4vw;
+        width: 100%;
+      }
     }
   }
-  main #home .extra {
-    font-size: 3vw;
-    right: inherit;
+  .extra {
+    font-size: 2vw;
+    /* gap: 5px; */
+    letter-spacing: 2px;
+    /* left: 50%; */
+    /* transform: translateX(-50%); */
   }
 }
