--- a/stylesheet/utils/arrowbutton.css
+++ b/stylesheet/utils/arrowbutton.css
@@ -1,58 +1,26 @@
 .button {
-  line-height: 1;
-  text-decoration: none;
-  display: inline-flex;
-  border: none;
-  cursor: pointer;
-  align-items: center;
-  gap: 0.75rem;
-  background-color: var(--clr);
+  --bg: #000;
+  --hover-bg: #bb90ff;
+  --hover-text: #000;
   color: #fff;
-  border-radius: 10rem;
-  font-weight: 600;
-  padding: 0.75rem 1.4rem;
-  padding-left: 20px;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  transition: background-color 0.3s;
-  font-size: 1vw;
-}
-
-.button__icon-wrapper {
-  flex-shrink: 0;
-  width: 20px;
-  height: 20px;
-  position: relative;
-  color: var(--clr);
-  background-color: #fff;
-  border-radius: 50%;
-  display: grid;
-  place-items: center;
-  overflow: hidden;
+  cursor: pointer;
+  border: 1px solid var(--bg);
+  border-radius: 12px;
+  padding: 0.8em 2em;
+  background: var(--bg);
+  transition: 0.2s;
 }
 
 .button:hover {
-  background-color: #000;
+  color: var(--hover-text);
+  transform: translate(-0.25rem, -0.25rem);
+  background: var(--hover-bg);
+  box-shadow: 0.25rem 0.25rem var(--bg);
 }
 
-.button:hover .button__icon-wrapper {
-  color: #000;
-}
-
-.button__icon-svg--copy {
-  position: absolute;
-  transform: translate(-150%, 150%);
-}
-
-.button:hover .button__icon-svg:first-child {
-  transition: transform 0.3s ease-in-out;
-  transform: translate(150%, -150%);
-}
-
-.button:hover .button__icon-svg--copy {
-  transition: transform 0.3s ease-in-out 0.1s;
+.button:active {
   transform: translate(0);
+  box-shadow: none;
 }
 
 .icon-yt {
