--- a/stylesheet/utils/background.css
+++ b/stylesheet/utils/background.css
@@ -1,35 +1,21 @@
-main .s1 {
-  background-color: hsla(79, 98%, 66%, 1);
-  background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 1799 1799' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.65' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)'/%3E%3C/svg%3E"),
+main #home .part2 {
+  background-color: hsla(327, 0%, 0%, 1);
+  background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 1582 1582' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.65' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)'/%3E%3C/svg%3E"),
+    radial-gradient(circle at 0% 99%, hsla(11, 0%, 0%, 1) 0%, transparent 67%),
     radial-gradient(
-      circle at 94% 95%,
-      hsla(170, 88%, 68%, 1) 3%,
-      transparent 76%
-    ),
-    radial-gradient(
-      circle at 89% 34%,
-      hsla(263, 96%, 51%, 1) 1%,
-      transparent 86%
-    ),
-    radial-gradient(
-      circle at 86% 50%,
-      hsla(318, 80%, 65%, 1) 7%,
-      transparent 76%
-    ),
-    radial-gradient(
-      circle at 89% 79%,
-      hsla(248, 76%, 53%, 1) 7%,
-      transparent 87%
-    ),
-    radial-gradient(
-      circle at 15% 44%,
-      hsla(4, 74%, 80%, 1) 15%,
+      circle at 46% 94%,
+      hsla(327, 100%, 50%, 1) 0%,
       transparent 81%
     ),
     radial-gradient(
-      circle at 99% 20%,
-      hsla(75, 88%, 92%, 1) 1%,
-      transparent 68%
+      circle at 93% 95%,
+      hsla(194, 71%, 57%, 1) 0%,
+      transparent 66%
+    ),
+    radial-gradient(
+      circle at 89% 8%,
+      hsla(271, 98%, 53%, 1) 0%,
+      transparent 150%
     );
-  background-blend-mode: overlay, normal, normal, normal, normal, normal, normal;
+  background-blend-mode: overlay, normal, normal, normal, normal;
 }
